_includes/manuals/1.11/3.6_upgrade.md

### Upgrading to Foreman {{page.version}}

#### Preparation

When upgrading across more than one version it is recommended to upgrade to each
intermediate version and follow all upgrade instructions for the previous versions
before updating to {{page.version}}.

#### Known issues
**EL6 and EL7 only**: [tfm-rubygem-ovirt_provision_plugin prevents](https://github.com/theforeman/ovirt_provision_plugin/issues/5) 
the upgrade process to finish correctly and needs to be removed if it was installed 
previously in Foreman versions <= 1.10.X:

    foreman-installer --no-enable-foreman-plugin-ovirt-provision
    yum remove tfm-rubygem-ovirt_provision_plugin

Continue with the steps below.

*Note*: ovirt_provision_plugin does not handle oVirt compute resources but deployment of oVirt
nodes from within oVirt.

#### Step 1 - Backup

It is recommended that you backup your database and modifications to Foreman
files(config/settings.yaml, unattended installations etc).  Most upgrades are
safe but it never hurts to have a backup just in case.

For more information about how to backup your instance head over to
[Backup](manuals/{{page.version}}/index.html#5.5.1Backup)

#### Step 2 - Perform the upgrade

Before proceeding, it is necessary to shutdown the Foreman instance (e.g.
`service httpd stop` or `service apache2 stop` usually).

Now it's time to perform the actual upgrade.  This process if different
depending on how you downloaded Foreman.  You only need to perform *one* of
the following options.

##### Step 2 (A) - Fedora or RHEL package (RPM) and installer setups

To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package for your operating system:

    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
    yum upgrade https://yum.theforeman.org/releases/{{page.version}}/f19/x86_64/foreman-release.rpm

Clean up the yum cache:

    yum clean all

First if using softwarecollections.org for SCL packages (default from the
installer), update the release package to add rh-ruby22 and rh-ror41
repositories:

    yum upgrade foreman-release-scl

Next upgrade all Foreman packages:

    yum upgrade tfm\* ruby\* foreman\*

If the command above raises an error when determining the packages to update,
check below for possible resolutions:

* `Requires: rh-ror41-runtime`: missing the rh-ror41 software collection repository.
  Check that a SCL repo with rh-ror41 is enabled as per [RPM Pre-requisites](manuals/{{page.version}}/index.html#3.3.1RPMPackages).

In order to catch all configuration changes and manage them properly you should install and run
rpmconf from the EPEL repository along with vim-enhanced (for vimdiff):

    rpmconf -a --frontend=vimdiff

You can skip to Step 3.

##### Step 2 (B) - Debian or Ubuntu package (deb) and installer setups

Upgrading from the last release to {{page.version}} has been tested on both
Debian and Ubuntu. Updating the packages will upgrade the application and
automatically migrate the database.

First edit `/etc/apt/sources.list.d/foreman.list` and change the release
number from the previous release or "stable" to `{{ page.version }}`:

    deb http://deb.theforeman.org/ wheezy {{ page.version }}
    deb http://deb.theforeman.org/ plugins {{ page.version }}

Ubuntu 12.04 (Precise) users must ensure the Brightbox Ruby NG PPA is
configured and that the default Ruby version is 1.8:

    add-apt-repository ppa:brightbox/ruby-ng
    update-alternatives --set ruby /usr/bin/ruby1.8
    update-alternatives --set gem /usr/bin/gem1.8

Next upgrade all Foreman packages:

    apt-get update
    apt-get --only-upgrade install ruby\* foreman\*

You can skip to Step 3.

##### Step 2 (C) - Downloaded release (tar.bz2)

- Uncompress the new program archive in a *new directory*.
- Copy your database settings-file `config/database.yml` into the new `config` directory.
- If your database is a simple file (e.g. SQLite), don't forget to make it available in the new directory.

VERY IMPORTANT: do NOT overwrite `config/settings.yml` with the old one.

##### Step 2 (D) - git checkouts only

*Please note* that there can be significant differences between stable and
development branches.  You MUST take care to select a branch and make sure you
get the correct one.

1. Go to the Foreman root directory and run the following command:

For staying on the stable branch:

- git checkout {{page.version}}-stable
- git pull

The following step is the one that could change the contents of your database.
Go to your new Foreman directory (or the git dir), then migrate and update the
contents of your database:

    foreman-rake db:migrate
    foreman-rake db:seed

You should compile i18n strings and precompile assets now:

    foreman-rake locale:pack
    foreman-rake assets:precompile RAILS_ENV=production

#### Step 3 - Post-upgrade steps

##### Step 3 (A) - Database migration and cleanup

The database should be migrated already, but you can make sure by executing the
migration script again, it should produce no errors or output:

    foreman-rake db:migrate
    foreman-rake db:seed

You should clear the cache and the existing sessions:

    foreman-rake tmp:cache:clear
    foreman-rake tmp:sessions:clear

##### Step 3 (B) - Ubuntu 12.04 users, change Ruby version

The configuration on Ubuntu 12.04 is now that the system-wide, default Ruby
version remains on 1.8 (with the update-alternatives commands earlier), but
that the Foreman app under Apache is changed to run under 1.9.

Edit both /etc/apache2/sites-available/05-foreman.conf and
/etc/apache2/sites-available/05-foreman-ssl.conf and anywhere inside the
`<VirtualHost>` block, add:

    PassengerRuby /usr/bin/foreman-ruby

Lastly, install the necessary Passenger package for Ruby 1.9:

    apt-get install passenger-common1.9.1

##### Step 3 (C) - Ubuntu 14.04 (Trusty) users, change PassengerRuby

Ubuntu 14.04 (Trusty) users must ensure that PassengerRuby is changed to point
to a symlink provided in the Foreman packages to ensure a smooth upgrade.  Edit
`/etc/apache2/sites-available/05-foreman*.conf` and ensure this is set inside
the `<VirtualHost` block:

    PassengerRuby /usr/bin/foreman-ruby

##### Optional Step 3 (C) - Run foreman-installer

If you used foreman-installer to set up your existing Foreman instance we
recommend running it again after upgrading. Note that the installer can
modify config files so this may overwrite your custom changes. You can run
the installer in noop mode so you can see what would be changed.

To see what would happen

    foreman-installer --noop --dont-save-answers --verbose

You may see ERRORS such as `/Stage[main]/Foreman_proxy::Register/Foreman_smartproxy[foreman-hostname.domain]:` `Could not evaluate: Connection refused - connect(2)` due to httpd / apache2 service being stopped.  These can be safely ignored.

To apply these changes, run the installer again without options

    foreman-installer

#### Step 4 - Restart

Restart the application server (e.g. mongrel, thin, passenger).

On RPM installations, run:

    service httpd restart

And on Debian/Ubuntu installations with Passenger, run:

    service apache2 restart

#### Common issues

See
[Troubleshooting](http://projects.theforeman.org/projects/foreman/wiki/Troubleshooting)
